# Dolphin-Matchmaking-Server

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Dolphin-Matchmaking-Server.sln  Makefile  README.md  cmake_install.cmake  gencmake
Dolphin-Matchmaking-Server/: Dolphin-Matchmaking-Server.sln
Dolphin-Matchmaking-Server/Dolphin-Matchmaking-Server/: Dolphin-Matchmaking-Server.vcxproj  Dolphin-Matchmaking-Server.vcxproj.filters  ReadMe.txt
ipch/DOLPHIN-MATCHMAKING-SERVER-38b2abe0/: DOLPHIN-MATCHMAKING-SERVER-b3d252cd.ipch
settings/: config.conf
source/: Config.cpp  Config.h  Connector.cpp  Connector.h  Dolphin-Matchmaking-Server.cpp  Dolphin-Matchmaking-Server.vcxproj  Dolphin-Matchmaking-Server.vcxproj.filters  GeoLocation.cpp  GeoLocation.h  Logger.cpp  Logger.h  Matchmaker.cpp  Matchmaker.h  MatchmakerPreferenceMap.h  Player.cpp  Player.h  PlayerInfo.cpp  PlayerInfo.h  PlayerQueue.cpp  PlayerQueue.h  PreferenceList.h  Server.cpp  Server.h  stdafx.cpp  stdafx.h
source/x64/Debug/: Dolphin-Matchmaking-Server.pch  vc140.idb
source/x64/Debug/Dolphin-.20533B9E.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Dolphin-Matchmaking-Server.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
x64/Debug/: Dolphin-Matchmaking-Server.ilk
